# c_cpp_snippets

./: .gitignore  001.env.cygwin.sage-sh.md  001.env.cygwin.sage-sh_mingw_msys2.md  16位汇编学习.md  Article.md  Clion.md  IoT.md  Linux_GCC_Debug.md  MAKEs_CMake.md  README.md  Windows.md  Windows_02_MFC.md  Windows_03_shellcode.md  Windows_10内核编程_kernel.md  Windows_VisualStudio.md  asm.md  hook_WeChat.md  hook_WeChat_Local.md  re_game.md  reverse_security.md  test_auto_自动化测试.md  tools.md  算法_algorithms.md
c_project/: 00_env.c  01_01_init_pointer.c  01_01_int_to_char.c  01_01_variable_force_convert.c  01_02_ByteFlip.c  01_02_length.c  01_02_marco_ida_defsh.c  01_03_keyword_auto_static_register_const.c  01_03_ptr_test.c  01_04_ptr_advanced_01.c  01_04_ptr_advanced_02_callback.c  01_09_endian.c  01_20_调用约定.c  01_printf.c  02_string_01.c  02_string_02_slice.c  02_string_10_convert_number_atoi.c  02_struct.c  02_struct_01_add_two_distance.c  02_struct_02_typedef.c  02_struct_03_nested.c  02_struct_04_stack.c  10_strcpy_memcpy_memset.c  11_strcmp.c  11_strcmp_ori.c  12_scanf.c  40_thread_05_performance_test1.c  40_thread_05_performance_test2.c  50_flow_beforemain.c  90_bruteforce_01_4char_basic_cmp.c  90_bruteforce_multiple.c  CMakeLists.txt  README.md  a100_shellcode.c  alg_RC4.c  alg_rol_ror.c  alg_sha1.c  alg_sha1_2.c  alg_sha512.c  basic_01_put_putchar_printf.c  (+18 more)
c_project/SIMD_SSE/: a01_add.c
c_project/a120_cuda/: README.md  a01_simple.cu  a02_default_kernel.cu
c_project/a120_cuda/sha256-bruteforce-cuda/: README.md  sha256_cracker_cpu.c  sha256_cracker_cuda.cu
c_project/a12_Python/: a01_HelloWorld.c  a02_Example.c
c_project/algorithm/: AES_Project.c  AES_Table.h  Crypto_tea.c  README.md  base36.c  base64.c  base64_02.c  base64_03.c  bruteforce1.c  bruteforce1_rc4.c  bruteforce2_enc.c  des1.c  rc4.c  rc4_bruteforce.c  xtea.c
c_project/ctf/pwn/: README.md  Read&Write.c  a01_stack_02_ret2text.c  a01_stack_03_ret2shellcode1.c  a01_stack_08_canary_01_by_read_printf_2times.c  a01_stack_08_canary_03_brute_force.c  a01_stack_08_canary_04_stack_chk_fail.c  a01_stack_08_canary_debug_01.c  a01_stack_12_ret2syscall_ret2csu1.c  a01_stack_12_ret2syscall_ret2csu2.c  heap_debug_001_base.c  heap_fastbin_debug_010_double_free.c  heap_fastbin_debug_010_double_free1.c  heap_fastbin_debug_010_double_free2.c  heap_fastbin_debug_010_double_free3.c  heap_fastbin_debug_010_double_free4.c  heap_fastbin_debug_010_double_free5_attack.c  heap_fastbin_debug_010_double_free5_attack2.c  heap_fastbin_debug_011_spirit1.c  heap_fastbin_debug_011_spirit2.c  pwn_10_heap_base.c  pwn_10_heap_uaf.c  砍一刀.c
c_project/ctf/reverse/: NetDreamCTF2025_nu0M1_Tu@nZ1_反调试检测.c  Re20230701折半搜索.cpp  anti_debug_veh.c  moectf2022_broken_hash.c  moectf2022_checinsoup.c  moectf2022_fake_code.c  moectf2022_fakekey.c  广东省大学生网络攻防大赛simple_re.cpp
c_project/dll/: library.h  library.py
c_project/junk_instruction/: a01.c  a01_v1_形式1-单字节.c  a01_v2_永恒跳转.c  a01_v3_更改ESP.c  a01_v4_jmp跳转+插入无效垃圾指令.c  a01_v5_永恒跳转嵌套.c  a02.c  chicken_soup.cpp
c_project/linux/: a50_fork_ptrace调用另一个程序.c  io_urandom.c  random1.c  random1_build.sh  random1_loader.c  re2.c  std_read.c
c_project/linux/hook_demo/: 1run.sh  Makefile  README.md  advanced_hook.c  demo_program.c  function_pointer_hook.c  gcc_attribute_hook.c  hook_example.c  (+3 more)
c_project/secure_test/: sec_app1.c
c_project/winapi/: process.c  readkey.c  setkey.c
c_project/反调试检测/: anti_01_IsDebuggerPresent.c  anti_02_CheckRemoteDebuggerPresent.c  anti_08_hardware_breakpoint_check.cpp  anti_09_GetTickCount_check.cpp  ctf_luoing.c  ctf_luoing.cpp
cpp_project/: CMakeLists.txt  README.txt  a03_vector_array_list.cpp  a05_convert_pointer.cpp  a05_string_transform.cpp  a100_log.cpp  a30_performance_bigobject.cpp  control_after_main_01_destructor.cpp  control_after_main_02_atexit.cpp  control_after_main_03_global_destructor.cpp  control_if_for_auto.cpp  file_02_write.cpp  file_03_read.cpp  file_03_read_whole_content.cpp  linux_get_hardwareinfo.cpp  main.cpp  str_test.cpp  string_30_reverse.cpp
cpp_project/a01_basic/: a05_loop_m2.cpp  a05_loop_m3.cpp  a05_loop_m4.cpp  a05_loop_m5.cpp  a05_loop_m6.cpp  a05_loop_m62.cpp  a06_多值返回_01_指针与引用.cpp  a06_多值返回_02_tuple_tie.cpp  a06_多值返回_03_struct_binding.cpp  a06_多值返回_04_callback.cpp  a06_多值返回_05_自定义Out.cpp  a06_多值返回_06_模版推导.cpp  a10_new.cpp  a20_虚函数.cpp
cpp_project/a02_std/: a01_basic_stdstl.cpp  a01_build.bat  a02_stringstream.cpp  a10_file_read1.cpp  a10_file_read2.cpp  a11_string_format_println_cpp23.cpp
cpp_project/a100_feature_cpp23/: CMakeLists.txt  main.cpp
cpp_project/cmake_a05_lz4/: CMakeLists.txt  main.cpp
cpp_project/cmake_a06_unittest/: CMakeLists.txt  CMakeLists2.c.cpp.txt  main.cpp  main1.cpp
cpp_project/http/: http_test.cpp
(+518 files in other folders)
